# e-report

./: .dockerignore  Dockerfile  package-lock.json  package.json
.devcontainer/: devcontainer.json
.github/workflows/: main.yml
src/: App.tsx  main.tsx
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/src/: db.rs  fungsi.rs  main.rs
src-tauri/src/db/: mongo.rs  mssql.rs
src-tauri/src/fungsi/: ai.rs  kueri_bc.rs
src-tauri/src/struktur/: mod.rs
src/fitur_state/: dataBank.tsx  dataParam.tsx  event.tsx  pengguna.tsx
src/fungsi/: basic.ts  bc.ts  database.ts  kolom_data.ts  kolom_data.tsx  kueri.ts
src/fungsi/halaman/: kelayakanTokoBaru.ts  kelayakanTokoBaru.tsx  ketersediaanStok.ts  labaRugiToko.ts  login.ts  penerimaanBarang.ts  penjualan.ts  stok.ts
src/halaman/: BuyingProposal.tsx  Dashboard.tsx  KelayakanTokoBaru.tsx  KetersediaanStok.tsx  LabaRugiToko.tsx  Login.tsx  PenerimaanBarang.tsx  PengaturanPengguna.tsx  Penjualan.tsx  Stok.tsx  Tentang.tsx
src/komponen/: DThree.stories.tsx  DThree.tsx  Drawer.tsx  Konten.tsx  Layout.tsx  Logo.tsx  MultiBrand.tsx  MultiKlasifikasi.tsx  MultiLokasi.tsx  MultiMC.tsx  MultiRegion.tsx  MultiSBU.tsx  Navbar.tsx  NavigasiPengguna.tsx  Navlink.tsx  PopUp.tsx  Tabel.tsx  TombolDrawer.tsx
src/komponen/kontenDrawer/: InputBuyingProposal.tsx  InputKetersediaanStok.tsx  InputLabaRugiToko.tsx  InputPenerimaanBarang.tsx  InputPenjualan.tsx  InputStok.tsx
src/komponen/kontenNavbar/: NavigasiPengguna.tsx  Navlink.tsx
src/komponen/kontenPopUp/: HapusProposal.tsx  (+2 more)
src/state/: hook.tsx  store.tsx
