[package]
name = "e-report"
version = "0.1.0"
description = "Reporting Tools for PT Prestasi Retail Innovation and PT Panatrade Caraka"
authors = ["Johanes Indra Pradana Pao"]
license = ""
repository = ""
default-run = "e-report"
edition = "2021"
rust-version = "1.60"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.3.0", features = [] }

[dependencies]
tauri = { version = "1.3.0", features = ["window-close"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
mongodb = { version = "2.5.0", default-features = false, features = ["async-std-runtime"] }
futures = "0.3.28"
tokio = "1.28.0"
tiberius = { version = "0.12.2", features = ["chrono"] }    
tokio-util = "0.7.8"
polars = { git = "https://github.com/pola-rs/polars", features = ["lazy", "serde"] }
lazy_static = "1.4.0"
tokio-stream = "0.1.14"
chrono="0.4.24"
struct-field-names-as-array = "0.2.0"
chatgpt_rs = "1.1.11"
regex = "1.9.1"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem and the built-in dev server is disabled.
# If you use cargo directly instead of tauri's cli you can use this feature flag to switch between tauri's `dev` and `build` modes.
# DO NOT REMOVE!!
custom-protocol = [ "tauri/custom-protocol" ]

[profile.dev]
incremental = true
strip = false
lto = false
opt-level = 0
